[package]
name = "hypoloop"
description = "A low-level control loop for real-time and baked simulations."
version = "0.1.6"
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/skyeterran/hypoloop"
keywords = ["gamedev", "simulation", "graphics"]
include = ["/src", "LICENSE", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
winit = "0.25.0"