[package]
name = "hypoloop"
description = "A low-level control loop for real-time and baked simulations."
version = "0.1.6"
edition = "2018"
license = "GPL-3.0"
repository = "https://github.com/skyeterran/hypoloop"
keywords = ["gamedev", "simulation", "graphics"]
include = ["/src", "LICENSE", "/examples"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
env_logger = "0.9"
log = "0.4"
pixels = "0.5.0"
winit = "0.25"
winit_input_helper = "0.10"
rand = "0.8.4"